CallReceiver CallRecord CallService eklendi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aykuttasil.callrecorder.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/buttonStopCallRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignStart="@+id/buttonStartCallRecord"
+        android:layout_below="@+id/buttonStartCallRecord"
+        android:layout_marginTop="21dp"
+        android:onClick="StopCallRecordClick"
+        android:text="Stop Call Record" />
+
+    <Button
+        android:id="@+id/buttonStartCallRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="19dp"
+        android:onClick="StartCallRecordClick"
+        android:text="Start Call Record" />
 </RelativeLayout>
